<resources>
    <string name="app_name">Nextzem</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="gujrati">Gujrati</string>
    <string name="tamil">Tamil</string>
    <string name="telgu">Telgu</string>
    <string name="punjabi">Punjabi</string>
    <string name="error_text_blank">This field cannot be left blank</string>
    <string name="register_new_user">Register New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="adhaar_number">Adhaar Number</string>
    <string name="pan_number">Pan Number</string>
    <string name="enter_mobile_number">Enter mobile number (without +91)</string>
    <string name="enter_adhaar_number">Enter adhaar number</string>
    <string name="enter_pan_number">Enter pan number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="register">Register</string>
    <string name="new_user">New user? Create a new account</string>
    <string name="otp_sent_message">OTP sent to your number. Please enter.</string>
    <string name="otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="error_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="error">Error</string>
    <string name="not_register">You are not register with us.Please Register.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>