<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:id="@+id/button_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/button_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hindi"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_marathi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/marathi"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_gujrati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gujrati"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_tamil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tamil"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_telgu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/telgu"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_punjabi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/punjabi"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>
</LinearLayout>
    </ScrollView>

</LinearLayout>